	PR c++/10555, c++/10576 	* pt.c (lookup_template_class): Handle class template with 	multiple levels of parameters when one of the levels contain 	errors.

* g++.dg/template/memclass1.C: New test.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@66634 138bc75d-0d04-0410-961f-82ee72b054a4